--- a/index.html
+++ b/index.html
@@ -156,7 +156,18 @@
         bgMusic.loop = true; bgMusic.volume = 1.0;
 
         const loader = new THREE.TextureLoader();
-        const photoFiles = ['./image1.jpeg', './image2.jpeg', './image3.jpeg', './image4.jpeg', './image5.jpeg'];
+        const photoFiles = [
+            './image1.jpeg',
+            './image2.jpeg',
+            './image3.jpeg',
+            './image4.jpeg',
+            './image5.jpeg',
+            './image6.jpeg',
+            './image7.jpeg',
+            './image8.jpeg',
+            './image9.jpeg',
+            './image10.jpeg',
+        ];
         const photoTextures = [];
         photoFiles.forEach((f, i) => photoTextures[i] = loader.load(f));
 
@@ -203,7 +214,7 @@
             redCount: 300,
             giftCount: 150,
             explodeRadius: 65,
-            photoOrbitRadius: 25,
+            photoOrbitRadius: 30,
             treeHeight: 70,
             treeBaseRadius: 35
         };
@@ -216,6 +227,11 @@
         let state = 'TREE';
         let selectedIndex = 0;
         let handX = 0.5;
+
+        let rotateDirection = 0; // -1 trái | 0 đứng | 1 phải
+        let rotateVelocity = 0;   // tốc độ xoay (quan trọng)
+        let handDetected = false;
+
 
         // ==========================================
         // 3. THREE.JS SYSTEM Vandiep
@@ -340,17 +356,25 @@
             const borderGeo = new THREE.PlaneGeometry(9, 9);
             const borderMat = new THREE.MeshBasicMaterial({ color: 0xFFD700 });
 
-            for (let i = 0; i < 5; i++) {
-                const mat = new THREE.MeshBasicMaterial({ map: photoTextures[i], side: THREE.DoubleSide });
+            for (let i = 0; i < photoTextures.length; i++) {
+                const mat = new THREE.MeshBasicMaterial({
+                    map: photoTextures[i],
+                    side: THREE.DoubleSide
+                });
+
                 const mesh = new THREE.Mesh(geo, mat);
                 const border = new THREE.Mesh(borderGeo, borderMat);
                 border.position.z = -0.1;
                 mesh.add(border);
-                mesh.visible = false; mesh.scale.set(0, 0, 0);
+
+                mesh.visible = false;
+                mesh.scale.set(0, 0, 0);
+
                 scene.add(mesh);
                 photoMeshes.push(mesh);
             }
         }
+
 
         function createDecorations() {
             // MERRY CHRISTMAS Vandiep
@@ -458,7 +482,6 @@
             } else {
                 // EXPLODE
                 group.scale.set(1, 1, 1);
-                group.rotation.y += (handRotY - group.rotation.y) * 0.1;
 
                 // size, color
                 for (let i = 0; i < count; i++) {
@@ -507,8 +530,21 @@
 
             } else if (state === 'EXPLODE') {
                 titleMesh.visible = false; starMesh.visible = false; loveMesh.visible = false;
+                // ===== SIMPLE HAND ROTATION =====
+
+                if (handDetected) {
+                    const ROTATE_SPEED = 0.1;
+                    const rotationDelta = rotateDirection * ROTATE_SPEED;
+
+                    groupGold.rotation.y += rotationDelta;
+                    groupRed.rotation.y += rotationDelta;
+                    groupGift.rotation.y += rotationDelta;
+                }
+
+
+
                 const baseAngle = groupGold.rotation.y;
-                const angleStep = (Math.PI * 2) / 5;
+                const angleStep = (Math.PI * 2) / photoMeshes.length;
                 let bestIdx = 0; let maxZ = -999;
                 photoMeshes.forEach((mesh, i) => {
                     mesh.visible = true;
@@ -516,6 +552,7 @@
                     const x = Math.sin(angle) * CONFIG.photoOrbitRadius;
                     const z = Math.cos(angle) * CONFIG.photoOrbitRadius;
                     const y = Math.sin(time + i) * 3;
+
                     mesh.position.lerp(new THREE.Vector3(x, y, z), 0.1);
                     mesh.lookAt(camera.position);
                     if (z > maxZ) { maxZ = z; bestIdx = i; }
@@ -579,12 +616,22 @@
 
 
                 if (results.multiHandLandmarks.length > 0) {
-                    let lm = results.multiHandLandmarks[0];
+                    handDetected = true;
 
-                    // ✅ FIX MIRROR FOR IPHONE
+                    let lm = results.multiHandLandmarks[0];
                     if (isMobile) lm = fixIphoneMirror(lm);
 
                     handX = lm[9].x;
+
+                    const offset = handX - 0.5;
+                    const DEAD_ZONE = 0.08;
+
+                    if (Math.abs(offset) < DEAD_ZONE) {
+                        rotateDirection = 0;
+                    } else {
+                        rotateDirection = offset;
+                    }
+
 
                     const tips = [8, 12, 16, 20];
                     const wrist = lm[0];
@@ -609,8 +656,10 @@
                         state = 'EXPLODE';
                     }
                 } else {
-                    state = 'TREE';
+                    handDetected = false;
+                    rotateDirection = 0; // ⛔ STOP XOAY NGAY
                 }
+
 
             });
 
